--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 flake8==7.1.0
 flake8-unused-globals==0.1.10
+fuzzywuzzy==0.18.0
+fuzzywuzzy-stubs==0.0.1
 idna==3.7
 isort==5.13.2
+Levenshtein==0.26.0
 mccabe==0.7.0
 mypy==1.10.1
 mypy-extensions==1.0.0
@@ -15,7 +18,9 @@ psycopg2-binary==2.9.10
 pycodestyle==2.12.0
 pyflakes==3.2.0
 python-dateutil==2.9.0.post0
+python-Levenshtein==0.26.0
 pytz==2024.1
+RapidFuzz==3.10.0
 requests==2.32.3
 six==1.16.0
 soupsieve==2.5
