--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
+cloudscraper==1.2.71
 flake8==7.1.0
 flake8-unused-globals==0.1.10
 fuzzywuzzy==0.18.0
